# TFCam

./: .gitignore  CMakeLists.txt  FreeCamClaude.ini  build_tfcam.bat  nexus_description.txt  vcpkg-configuration.json  vcpkg.json
cmake/: x64-windows-static.cmake
include/: SKSEMenuFramework.h
src/: CameraLight.cpp  CameraLight.h  FreeCamController.cpp  FreeCamController.h  FreeCamMenu.cpp  FreeCamMenu.h  FreeCamUI.cpp  FreeCamUI.h  FreezeCamera.cpp  FreezeCamera.h  FreezeTime.cpp  FreezeTime.h  HUDHider.cpp  HUDHider.h  SceneTracker.cpp  SceneTracker.h  iHUDBridge.cpp  iHUDBridge.h  plugin.cpp
